# udpsocks-demo

./: CMakeLists.txt  README.md
cmake/: buildConfig.hpp.in  config.hpp.in  utils.cmake
include/: config.hpp
src/: Client.cpp  Server.cpp
